--- a/LeaRun.Application/LeaRun.Application.Web/XmlConfig/system.config
+++ b/LeaRun.Application/LeaRun.Application.Web/XmlConfig/system.config
@@ -29,11 +29,11 @@
   <!-- 联系我们 -->
   <add key="Contact" value="www.gdwsxh.cn" />
   <!-- 公司名称 -->
-  <add key="CustomerCompanyName" value="广州惠侨计算机科技有限公司" />
+  <add key="CustomerCompanyName" value="深圳诺博医疗技术有限公司" />
   <!-- 系统名称 -->
-  <add key="SystemName" value="绩效考核管理平台" />
+  <add key="SystemName" value="智慧医疗统一管理平台" />
   <!-- 软件名称 -->
-  <add key="SoftName" value="绩效系统信息平台" />
+  <add key="SoftName" value="智慧医疗统一管理平台" />
   <!-- 软件版本 -->
   <add key="Version" value="1.00" />
   <!-- 软件注册码，备用 -->
