--- a/LeaRun.Application/LeaRun.Application.IService/LeaRun.Application.IService.csproj
+++ b/LeaRun.Application/LeaRun.Application.IService/LeaRun.Application.IService.csproj
@@ -108,6 +108,7 @@
     <Compile Include="CustomerManage\IReceivableReportService.cs" />
     <Compile Include="DataAnalysis\IDataAnalysisService.cs" />
     <Compile Include="DemoManage\OfficeRkIService.cs" />
+    <Compile Include="DrugConsumableManage\IDrugStandardService.cs" />
     <Compile Include="FlowManage\WFDelegateRecordIService.cs" />
     <Compile Include="FlowManage\WFDelegateRuleIService.cs" />
     <Compile Include="FlowManage\WFProcessInstanceIService.cs" />
