--- a/LeaRun.Application/LeaRun.Application.Mapping/LeaRun.Application.Mapping.csproj
+++ b/LeaRun.Application/LeaRun.Application.Mapping/LeaRun.Application.Mapping.csproj
@@ -86,6 +86,7 @@
     <Compile Include="CustomerManage\OrderMap.cs" />
     <Compile Include="DemoManage\OfficeRkEntryMap.cs" />
     <Compile Include="DemoManage\OfficeRkMap.cs" />
+    <Compile Include="DrugConsumableManage\DrugStandardMap.cs" />
     <Compile Include="FlowManage\WFDelegateRecordMap.cs" />
     <Compile Include="FlowManage\WFDelegateRuleMap.cs" />
     <Compile Include="FlowManage\WFDelegateRuleSchemeInfoMap.cs" />
